--- a/FallenClient/wwwroot/index.html
+++ b/FallenClient/wwwroot/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fallen Tools</title>
+    <title>FallenClient</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="MyBlazorApp.styles.css" rel="stylesheet" />
+    <link href="FallenClient.styles.css" rel="stylesheet" />
 </head>
 
 <body>
